--- a/MyProducts.WebApi/Web.config
+++ b/MyProducts.WebApi/Web.config
@@ -9,9 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ProductsContext" 
-         connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=ProductsContext-20170706114934; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ProductsContext-20170706114934.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="myconstring" 
+         connectionString="MYSQLCONNSTR_localdb" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
