--- a/MyProducts.WebApi/Web.config
+++ b/MyProducts.WebApi/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="myconstring" 
-         connectionString="MYSQLCONNSTR_localdb" />
+         connectionString="Server=tcp:mydbserver1992.database.windows.net,1433;Initial Catalog=mydb;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
